--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "files": ["dist", "esm", "cjs"],
+  "files": [
+    "dist",
+    "esm",
+    "cjs"
+  ],
   "scripts": {
     "build": "pnpm build:clean && pnpm build:esm && pnpm build:cjs && pnpm build:dist",
     "build:clean": "rimraf ./dist && rimraf ./esm && rimraf ./cjs",
@@ -18,8 +22,8 @@
     "build:cjs": "babel ./src --out-dir ./cjs --extensions .ts,.tsx --plugins @babel/plugin-transform-modules-commonjs"
   },
   "peerDependencies": {
-    "@deskpro/app-sdk": "^3.0.20",
-    "@deskpro/deskpro-ui": "^7.18.7",
+    "@deskpro/app-sdk": "^4.0.1",
+    "@deskpro/deskpro-ui": "^8.0.0",
     "@tanstack/react-query": "^4.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^16.0.0",
@@ -29,21 +33,20 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.24.7",
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-transform-modules-commonjs": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@typescript/lib-dom": "npm:@types/web@^0.0.148",
     "jest": "^29.7.0",
     "react-resize-observer": "^1.1.1",
-    "rimraf": "^5.0.7",
-    "typescript": "^5.4.5"
+    "rimraf": "^5.0.10",
+    "typescript": "^5.6.3"
   }
 }
