--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "files": ["dist", "esm", "cjs"],
+  "files": [
+    "dist",
+    "esm",
+    "cjs"
+  ],
   "scripts": {
     "build": "pnpm build:clean && pnpm build:esm && pnpm build:cjs && pnpm build:dist",
     "build:clean": "rimraf ./dist && rimraf ./esm && rimraf ./cjs",
@@ -29,21 +33,19 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.24.7",
-    "@babel/core": "^7.24.7",
-    "@babel/plugin-transform-modules-commonjs": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@typescript/lib-dom": "npm:@types/web@^0.0.148",
     "jest": "^29.7.0",
     "react-resize-observer": "^1.1.1",
-    "rimraf": "^5.0.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.7.2"
   }
 }
