--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "pnpm build:clean && pnpm build:esm && pnpm build:cjs && pnpm build:dist",
-    "build:clean": "rimraf ./dist && rimraf ./esm && rimraf ./cjs",
+    "build:clean": "rm -rf ./dist && rm -rf ./esm && rm -rf ./cjs",
     "build:dist": "tsc",
     "build:esm": "tsc --outDir ./esm",
     "build:cjs": "babel ./src --out-dir ./cjs --extensions .ts,.tsx --plugins @babel/plugin-transform-modules-commonjs"
